[metadata]
version = 1.0.3
name = rockets
summary = Rockets python client
url = https://github.com/BlueBrain/Rockets
author = Daniel Nachbaur
author-email = bbp-open-source@googlegroups.com
license = LGPLv3
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords = rockets, websocket, json-rpc, bbp, BlueBrain

[pycodestyle]
max-line-length = 100

[pydocstyle]
ignore = D107,D202,D203,D212,D400,D401

[coverage:report]
show_missing = True
